# validate

./: .gitignore  Cargo.toml  LICENSE.md  README.md  crates.js  help.html  index.html  index.md  search-index.js  settings.html  source-files.js
.github/: docs.yaml  style.yaml  tests.yaml
.github/workflows/: build.yaml  coverage.yaml  docs.yaml
derive/: cargo.toml
derive/src/: lib.rs
implementors/validate/: trait.Validate.js
random_data_tests/test_data/: data.csv
src/: lib.rs  numberish.rs  scatter.rs  stats.rs  time_series.rs  validator_wrapper.rs
src/validate/: lib.rs.html  numberish.rs.html  scatter.rs.html  stats.rs.html  time_series.rs.html  validator_wrapper.rs.html
tests/: custom_validator.rs  macro.rs  scatter.html  series.html  series_validator.rs
validate/: all.html  attr.valid.html  enum.ValidationResult.html  fn.from_csv.html  index.html  macro.assert_close.html  macro.assert_not_close!.html  macro.assert_not_close.html  sidebar-items.js  struct.ScatterValidator.html  struct.SeriesValidator.html  struct.Validations.html  struct.Validator.html  struct.ValidatorWrapper.html  trait.Validate.html  type.ValidFunc.html
validate/numberish/: index.html  sidebar-items.js  trait.Nanish.html  trait.Numberish.html  trait.OneZero.html
validate/scatter/: index.html  sidebar-items.js  struct.ScatterValidator.html
validate/stats/: fn.linear_coefficients.html  fn.mean.html  fn.mean_bias_error.html  fn.min_max.html  fn.root_mean_squared_error.html  fn.try_into_t.html  index.html  sidebar-items.js
validate/time_series/: index.html  sidebar-items.js  (+1 more)
(+15 files in other folders)
