
[workspace]
members = ['derive']

[package]
name = "validate"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive = { path = "derive" } 
csv = "1"
poloto = "15.2.0"
pulldown-cmark = "0.9.1"

[[tests]]
